--- a/package.json
+++ b/package.json
@@ -3,20 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "framer-motion": "^10.12.16",
-    "lucide-react": "^0.280.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "build": "tailwindcss -i ./src/index.css -o ./dist/output.css --minify"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^4.2.0",
-    "vite": "^5.0.0"
+    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   }
 }
